--- a/index.html
+++ b/index.html
@@ -1,194 +1,190 @@
-<<<<<<< HEAD <!DOCTYPE html>
-    <html lang="pl">
+<!DOCTYPE html>
+<html lang="pl">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dogger-Szkolenia psów </title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&family=Mouse+Memoirs&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-        <script src="https://kit.fontawesome.com/4b58f93b4a.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://unpkg.com/@tabler/icons@latest/iconfont/tabler-icons.min.css">
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./dist/css/style.min.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dogger-Szkolenia psów </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&family=Mouse+Memoirs&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/4b58f93b4a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/@tabler/icons@latest/iconfont/tabler-icons.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="./dist/css/style.min.css">
+</head>
 
-    <body data-bs-spy="scroll" data-bs-target="#navbar">
-        <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="#"> <i class="ti ti-paw"></i> Dogger</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <i class="fa-solid fa-bars btn-bar"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ms-auto">
-                        <a class="nav-link active" href="#home">home</a>
-                        <a class="nav-link" href="#aboutus">o nas</a>
-                        <a class="nav-link" href="#price">cennik</a>
-                        <a class="nav-link" href="#contact">kontakt</a>
-                    </div>
+<body data-bs-spy="scroll" data-bs-target="#navbar">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="#"> <i class="ti ti-paw"></i> Dogger</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars btn-bar"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link active" href="#home">home</a>
+                <a class="nav-link" href="#aboutus">o nas</a>
+                <a class="nav-link" href="#price">cennik</a>
+                <a class="nav-link" href="#contact">kontakt</a>
+            </div>
+        </div>
+    </div>
+</nav>    <section id="home">
+
+        <div class="hero-img">
+            <div class="hero-shadow"></div>
+            <div class="hero-text focus-in-expand-fwd">
+                <h1><span>Dog</span>ger</h1>
+                <p>Profesjonalne szkolenia psów</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="aboutus" class="aboutus">
+        <div class="wrapper">
+            <h1 class="title">O nas</h1>
+            <div class="aboutus-box">
+                <img class="about-img" src="./dist/img/dama1.jpg" alt="Szczęśliwy pies na niebieskim tle">
+
+                <div class="aboutus-text" data-aos="fade-right">
+                    <h3>Psy to nasza pasja</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto nulla praesentium quod
+                        ducimus
+                        esse excepturi culpa tempora repellendus numquam in ea, facere enim laboriosam cupiditate
+                        quas
+                        nobis
+                        voluptates quo deserunt ut consequatur quidem voluptatibus sapiente fugiat! Reprehenderit
+                        error
+                        doloribus sunt repellat consectetur, officiis aperiam aliquid! At hic officia numquam
+                        reprehenderit!
+                    </p>
                 </div>
             </div>
-        </nav>
-        <section id="home">
+        </div>
+        </div>
+    </section>
 
-            <div class="hero-img">
-                <div class="hero-shadow"></div>
-                <div class="hero-text focus-in-expand-fwd">
-                    <h1><span>Dog</span>ger</h1>
-                    <p>Profesjonalne szkolenia psów</p>
-                </div>
-            </div>
-        </section>
 
-        <section id="aboutus" class="aboutus">
-            <div class="wrapper">
-                <h1 class="title">O nas</h1>
-                <div class="aboutus-box">
-                    <img class="about-img" src="./dist/img/dama1.jpg" alt="Szczęśliwy pies na niebieskim tle">
-
-                    <div class="aboutus-text" data-aos="fade-right">
-                        <h3>Psy to nasza pasja</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto nulla praesentium quod
-                            ducimus
-                            esse excepturi culpa tempora repellendus numquam in ea, facere enim laboriosam cupiditate
-                            quas
-                            nobis
-                            voluptates quo deserunt ut consequatur quidem voluptatibus sapiente fugiat! Reprehenderit
-                            error
-                            doloribus sunt repellat consectetur, officiis aperiam aliquid! At hic officia numquam
-                            reprehenderit!
+    <section id="price" class="price">
+        <div class="wrapper">
+            <h1 class="title">Cennik</h1>
+            <div class="card-box">
+                <div class="card">
+                    <div class="img one"></div>
+                    <div class="text text-two">
+                        <h3>Posłuszeństwo</h3>
+                        <p>Szkolenie ma na celu przygotowanie psa oraz właściciela poczas spacerów czy wizyt
+                            znajomych
                         </p>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </section>
-
-
-        <section id="price" class="price">
-            <div class="wrapper">
-                <h1 class="title">Cennik</h1>
-                <div class="card-box">
-                    <div class="card">
-                        <div class="img one"></div>
-                        <div class="text text-two">
-                            <h3>Posłuszeństwo</h3>
-                            <p>Szkolenie ma na celu przygotowanie psa oraz właściciela poczas spacerów czy wizyt
-                                znajomych
-                            </p>
-                            <hr>
-                            <p class="price-card">Cena: 2000zł</p>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="img two"></div>
-                        <div class="text text-two">
-                            <h3>Węch</h3>
-                            <p>Szkolenie to pozwala na doskonalenie psiego węchu.W tym celu zastosowano szereg
-                                specjalnych
-                                ćwiczeń</p>
-                            <hr>
-                            <p class="price-card">Cena: 1500zł</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="img three"></div>
-                        <div class="text text-two">
-                            <h3>Combat</h3>
-                            <p>Szkolenie dla najdzielniejszych i wytrwałych psów,które chcą dołączyć do elitarnej grupy
-                                K-9
-                            </p>
-                            <hr>
-                            <p class="price-card">Cena: 2500zł</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-        <section id="contact" class="contact">
-            <h1 class="title">Kontakt</h1>
-            <div class="wrapper">
-                <div class="contact-box">
-                    <div class="map-box">
-                        <iframe class="map"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2468.8006492776653!2d19.49652905162956!3d51.773251479579876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471bcb474b6014f7%3A0xbeeb4d736599a590!2zS29uc3R5dHVjeWpuYSwgOTAtMDAxIMWBw7Nkxbo!5e0!3m2!1spl!2spl!4v1660200788576!5m2!1spl!2spl"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                    <div class="contact-text">
-                        <h3>Adres:
-                        </h3>
-                        <p>ul.Konstytucyjna 47</p>
-                        <p>90-001 Łódź </p>
-                        <p>tel. 502 335 929</p>
-                        <h3>Media:</h3>
-                        <div class="contact-media">
-                            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                            <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-                            <a href="#"><i class="fa-brands fa-square-snapchat"></i></a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-        <footer class="footer">
-            <div class="wrapper">
-                <div class="foot-box">
-                    <div class="box-left">
-                        <h3>Napisz do nas:</h3>
-                        <form action="contact-form">
-                            <div class="box">
-                                <label for="Name">Imię</label>
-                                <input type="text" id="name">
-                            </div>
-                            <div class="box">
-                                <label for="Name">e-mail</label>
-                                <input type="mail" id="mail">
-                            </div>
-                            <div class="box">
-                                <label for="Name">Treść</label>
-                                <textarea name="" id="" cols="30" rows="10"></textarea>
-                            </div>
-                            <button type="submit" class="btn-send">Wyślij</button>
-                        </form>
-                    </div>
-                    <div class="box-right">
-                        <div class="links">
-                            <h3>Nawigacja</h3>
-                            <a class="nav-link active" href="#home">home</a>
-                            <a class="nav-link" href="#aboutus">o nas</a>
-                            <a class="nav-link" href="#price">cennik</a>
-                            <a class="nav-link" href="#contact">kontakt</a>
-                        </div>
                         <hr>
-                        <div class="footer-media">
-                            <h3>Media</h3>
-                            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                            <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-                            <a href="#"><i class="fa-brands fa-square-snapchat"></i></a>
-                        </div>
+                        <p class="price-card">Cena: 2000zł</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="img two"></div>
+                    <div class="text text-two">
+                        <h3>Węch</h3>
+                        <p>Szkolenie to pozwala na doskonalenie psiego węchu.W tym celu zastosowano szereg
+                            specjalnych
+                            ćwiczeń</p>
+                        <hr>
+                        <p class="price-card">Cena: 1500zł</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img three"></div>
+                    <div class="text text-two">
+                        <h3>Combat</h3>
+                        <p>Szkolenie dla najdzielniejszych i wytrwałych psów,które chcą dołączyć do elitarnej grupy
+                            K-9
+                        </p>
+                        <hr>
+                        <p class="price-card">Cena: 2500zł</p>
                     </div>
                 </div>
             </div>
-            <div class="copy">
-                <p>&copy; Dogger <span>2022</span></p>
-            </div>
-        </footer>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="./dist/js/aos.min.js"></script>
-        <script src="./dist/js/script.min.js"></script>
-    </body>
+        </div>
+    </section>
 
-    </html>
+
+    <section id="contact" class="contact">
+        <h1 class="title">Kontakt</h1>
+        <div class="wrapper">
+            <div class="contact-box">
+                <div class="map-box">
+                    <iframe class="map"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2468.8006492776653!2d19.49652905162956!3d51.773251479579876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471bcb474b6014f7%3A0xbeeb4d736599a590!2zS29uc3R5dHVjeWpuYSwgOTAtMDAxIMWBw7Nkxbo!5e0!3m2!1spl!2spl!4v1660200788576!5m2!1spl!2spl"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="contact-text">
+                    <h3>Adres:
+                    </h3>
+                    <p>ul.Konstytucyjna 47</p>
+                    <p>90-001 Łódź </p>
+                    <p>tel. 502 335 929</p>
+                    <h3>Media:</h3>
+                    <div class="contact-media">
+                        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-snapchat"></i></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+    <div class="wrapper">
+        <div class="foot-box">
+            <div class="box-left">
+                <h3>Napisz do nas:</h3>
+                <form action="contact-form">
+                    <div class="box">
+                        <label for="Name">Imię</label>
+                        <input type="text" id="name">
+                    </div>
+                    <div class="box">
+                        <label for="Name">e-mail</label>
+                        <input type="mail" id="mail">
+                    </div>
+                    <div class="box">
+                        <label for="Name">Treść</label>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                    </div>
+                    <button type="submit" class="btn-send">Wyślij</button>
+                </form>
+            </div>
+            <div class="box-right">
+                <div class="links">
+                    <h3>Nawigacja</h3>
+                    <a class="nav-link active" href="#home">home</a>
+                    <a class="nav-link" href="#aboutus">o nas</a>
+                    <a class="nav-link" href="#price">cennik</a>
+                    <a class="nav-link" href="#contact">kontakt</a>
+                </div>
+                <hr>
+                <div class="footer-media">
+                    <h3>Media</h3>
+                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-snapchat"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copy">
+        <p>&copy; Dogger <span>2022</span></p>
+    </div>
+</footer>    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./dist/js/aos.min.js"></script>
+    <script src="./dist/js/script.min.js"></script>
+</body>
+
+</html>
