--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
-    <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
+    <!-- <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#"> <i class="ti ti-paw"></i> Dogger</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fa-solid fa-bars btn-bar"></i>
+            <i class="fa-solid  fa-bars btn-bar"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
@@ -34,8 +34,26 @@
             </div>
         </div>
     </div>
-</nav>    <section id="home">
+</nav> -->
 
+<nav id="navbar" class="navbar navbar-expand-lg  position-fixed top-0 w-100 py-3">
+    <div class="container">
+        <a class="navbar-brand" href="#"> <i class="ti ti-paw"></i> Dogger</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link active" href="#home">home</a>
+                <a class="nav-link" href="#aboutus">o nas</a>
+                <a class="nav-link" href="#price">ceny</a>
+                <a class="nav-link" href="#contact">kontakt</a>
+            </div>
+        </div>
+    </div>
+</nav>  
+    <section id="home">
         <div class="hero-img">
             <div class="hero-shadow"></div>
             <div class="hero-text focus-in-expand-fwd">
