--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&family=Mouse+Memoirs&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/4b58f93b4a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/@tabler/icons@latest/iconfont/tabler-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./dist/css/style.min.css">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
+
     
 <nav id="navbar" class="navbar navbar-expand-lg  position-fixed top-0 w-100 py-3">
     <div class="container">
@@ -35,8 +36,7 @@
             </div>
         </div>
     </div>
-</nav>  
-    <section id="home">
+</nav>    <section id="home">
         <div class="hero-img">
             <div class="hero-shadow"></div>
             <div class="hero-text focus-in-expand-fwd">
@@ -182,7 +182,8 @@
     <div class="copy">
         <p>&copy; Dogger <span>2022</span></p>
     </div>
-</footer>    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+</footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./dist/js/aos.min.js"></script>
     <script src="./dist/js/script.min.js"></script>
